--- a/assets/css/about_css.css
+++ b/assets/css/about_css.css
@@ -2590,11 +2590,12 @@ input, select, textarea {
 
 
 	img.large_image {
-		width: 350px;
+		width: 250px;
+		padding-bottom: 20px;
 	}
 
 	img.small_image{
-		width: 200px;
+		width: 100px;
 	}
 
 	/* .image {
